upload-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: upload-depl
  labels:
    app: upload-depl
spec:
  selector:
    matchLabels:
      app: upload-depl
  template:
    metadata:
      labels:
        app: upload-depl
    spec:
      containers:
      - name: upload
        image: ricardoandaluz/wavdio:upload
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5000
