user-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-depl
  labels:
    app: user-depl
spec:
  selector:
    matchLabels:
      app: user-depl
  template:
    metadata:
      labels:
        app: user-depl
    spec:
      containers:
      - name: user
        image: ricardoandaluz/wavdio:user
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5000
