song-db-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: catalog-db
spec:
  type: ClusterIP
  selector:
    app: song-db-depl
  ports:
  - port: 6381
    targetPort: 6381
