user-db-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: catalog-db
spec:
  type: ClusterIP
  selector:
    app: user-db-depl
  ports:
  - port: 6382
    targetPort: 6382
