ingress-gateway.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  labels:
    name: app-ingress
spec:
  rules:
  - host: localhost
    http:
      paths:
      - pathType: Prefix
        path: /home
        backend:
          service:
            name: home
            port: 
              number: 5000
      - pathType: Prefix
        path: /
        backend:
          service:
            name: user
            port:
              number: 5000
      - pathType: Prefix
        path: /player
        backend:
          service:
            name: player
            port: 
              number: 5000
      - pathType: Prefix
        path: /upload
        backend:
          service:
            name: upload
            port: 
              number: 5000
      - pathType: Prefix
        path: /catalog
        backend:
          service:
            name: catalog
            port: 
              number: 5000
